--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-DB_HOST='localhost'
-DB_USER='root'
-DB_PASSWORD=''
-DB_NAME='bitcoin'
+DB_HOST=dbserver1.c32ogge4ouv0.ap-south-1.rds.amazonaws.com
+DB_USER=admin
+DB_PASSWORD=12345678
+DB_NAME=bitcoin
 JWT_SECRET='MIKE'
 API_BASE_URL=https://api.coinranking.com/v2
 API_KEY=coinranking159b8a3f419c9af1da37f3902d94bb17b1b7d82fc7054735
